Project

General

Profile

Actions

Bug #41045

closed

multisite: datalog/mdlog trim don't loop until done

Added by Casey Bodley almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite trim
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

these commands will only send a single osd request and trim at max 1000 entries, and not all the way to the given --end-marker. the commands should keep sending these requests until a -ENODATA error code indicates there's nothing more to trim


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #41322: luminous: multisite: datalog/mdlog trim don't loop until doneResolvedActions
Copied to rgw - Backport #41323: nautilus: multisite: datalog/mdlog trim don't loop until doneResolvedNathan CutlerActions
Copied to rgw - Backport #41324: mimic: multisite: datalog/mdlog trim don't loop until doneResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley almost 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 29448
Actions #2

Updated by Casey Bodley almost 5 years ago

  • Status changed from Fix Under Review to 7
Actions #3

Updated by Casey Bodley over 4 years ago

  • Status changed from 7 to Pending Backport
Actions #4

Updated by Casey Bodley over 4 years ago

  • Copied to Backport #41322: luminous: multisite: datalog/mdlog trim don't loop until done added
Actions #5

Updated by Casey Bodley over 4 years ago

  • Copied to Backport #41323: nautilus: multisite: datalog/mdlog trim don't loop until done added
Actions #6

Updated by Casey Bodley over 4 years ago

  • Copied to Backport #41324: mimic: multisite: datalog/mdlog trim don't loop until done added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF