radosgw-admin: 'datalog trim' takes shard-id and loops until done

Fixes: https://tracker.ceph.com/issues/41045

Signed-off-by: Casey Bodley <cbodley@redhat.com>